# spotrend

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  coverage.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: python-app.yml  python-ci.yml
data/: tracks.csv
examples/: examples.ipynb  usage.ipynb
notebooks/: 1_data_preparation.ipynb  2_data_exploration.ipynb  3_data_preprocessing.ipynb  3_data_transformation.ipynb  4_data_modelling.ipynb  5_evaluation.ipynb  data_classifier.ipynb  data_cleaning.ipynb  data_exploration.ipynb
spotrend/: api.py  client.py  data.py  exceptions.py  loader.py  pattern.py  type.py
spotrends/: client.py
spotrends/tests/unit/: data_test.py
src/: __main__.py  spotrends.py
src/api/: __main__.py  env.py  environment.py  spotify.py  tracker.py
src/api/utils/: checker.py  formatter.py  spreadsheet.py
src/data/: checker.py  loader.py
src/main/: spotrends.py
src/test/: setup_test.py  test_spotrends.py
src/utils/: checker.py  formatter.py
test/: checker_test.py  formatter_test.py  loader_test.py
tests/unit/: api_test.py  client_test.py  data_test.py  loader_test.py  unit_test.py
