[project]
name = "spotrends"
version = "0.0.1"
authors = [
  { name="Mario Sessa", email="m.sessa65@icloud.com" },
]
description = "A Spotify track loader package using Spotipy API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mase-git/spotrends"
"Bug Tracker" = "https://github.com/mase-git/spotrends/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

