[project]
name = "spotrend"
version = "0.0.2"
authors = [
  { name="Mario Sessa", email="kode.gcloud@gmail.com" },
]
description = "Fundament package for Spotify data integration using Spotipy and Spotify API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spotrend/spotrend"
"Bug Tracker" = "https://github.com/spotrend/spotrend/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

